--- a/404.html
+++ b/404.html
@@ -1,1 +1,63 @@
 <!-- 404 error page: add CSS images and cool animations so users won't realise they're in the wrong place :) -->
+
+<html>
+
+  <head>
+      <title>404 Error</title>
+      <script src="code.js"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <style>
+        body, html { height: 100%; width: 100%; overflow: hidden; font-family: "Courier New", Courier, Helvetica, Arial, sans-serif;}
+        .captioned {display: none; height: 500px; width: 100%;}
+        #image {height: 350px; width: 350px; margin: auto; display: block;}
+        #text {text-align: center; color:#000000;}
+        footer {position: absolute; right: 0; bottom: 0; left: 0; padding: 5px; margin: 5px;}
+        a,a:active,a:focus,a:hover,a:visited {text-decoration:none; color:#000000;}
+        #error {font-family: "Courier New", Courier, Helvetica, Arial, sans-serif;}
+      </style>
+  </head>
+
+  <body>
+
+    <p id="error">404 Error: This page cannot be found</p>
+
+    <div class="captioned" id="1">
+      <img id="image" src="images/404/spocktocat.png">
+      <p id="text">"He's dead Jim!"</p>
+    </div>
+
+    <div class="captioned" id="2">
+      <img id="image" src="images/404/constructocat2.jpg">
+      <p id="text">You're early! This page is still "Under Construction"</p>
+    </div>
+
+    <div class="captioned" id="3">
+      <img id="image" src="images/404/jean-luc-picat.jpg">
+      <p id="text">"The line must be drawn here! This far, no farther!"</p>
+    </div>
+
+    <div class="captioned" id="4">
+      <img id="image" src="images/404/visionary.jpg">
+      <p id="text">Like all great visionaries, you can see webpages <italic>before they're even written</italic>.</p>
+    </div>
+
+    <div class="captioned" id="5">
+      <img id="image" src="images/404/waldocat.png">
+      <p id="text">Where's the webpage? Pretty sure I left it around here somewhere...</p>
+    </div>
+
+    <footer>
+      <span><a href=""><i class="fa fa-terminal fa-lg" aria-hidden="true"></i></a></span>
+      <span><a href=""><i class="fa fa-life-ring fa-lg" aria-hidden="true"></i></a></span>
+      <span><a href=""><i class="fa fa-code-fork fa-lg" aria-hidden="true"></i></a></span>
+    </footer>
+
+  </body>
+
+  <script>
+    var index = getRandomInt(1,5);
+    var image = document.getElementById(index.toString());
+    image.style.display = "block";
+  </script>
+
+</html>
