updated icon links

--- a/500.html
+++ b/500.html
@@ -49,9 +49,8 @@
     </div>
 
     <footer>
-      <span><a href=""><i class="fa fa-terminal fa-lg" aria-hidden="true"></i></a></span>
-      <span><a href=""><i class="fa fa-life-ring fa-lg" aria-hidden="true"></i></a></span>
-      <span><a href=""><i class="fa fa-code-fork fa-lg" aria-hidden="true"></i></a></span>
+      <span><a href="https://github.com/contact"><i class="fa fa-life-ring fa-lg" aria-hidden="true"></i></a></span>
+      <span><a href="https://github.com/Cutwell/Cute-Crashes"><i class="fa fa-code-fork fa-lg" aria-hidden="true"></i></a></span>
     </footer>
 
   </body>
